[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu/Pause.gd" type="Script" id=1]
[ext_resource path="res://materials-and-shaders/GodotRetro/Screen Shaders/VHSPause.shader" type="Shader" id=2]

[sub_resource type="VisualShader" id=1]
code = "shader_type spatial;
render_mode specular_schlick_ggx, async_visible;




void vertex() {
// Output:0

}

void fragment() {
// Output:0

}

void light() {
// Output:0

}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 2 )
shader_param/shake_amount_x = 250.0
shader_param/shake_amount_y = 40.0
shader_param/white_hlines = 50.0
shader_param/white_vlines = 80.0

[node name="EscMenu" type="Control"]
pause_mode = 2
material = SubResource( 2 )
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 3 )
margin_left = -6.10352e-05
margin_top = -2.28882e-05
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.945098, 0.945098, 0.945098, 1 )
margin_left = 389.0
margin_top = 126.0
margin_right = 794.0
margin_bottom = 376.0
rect_scale = Vector2( 2.71794, 3.15016 )

[node name="QuitButton" type="Button" parent="Panel"]
margin_left = 90.0
margin_top = 190.0
margin_right = 316.0
margin_bottom = 237.0
text = "Quit"

[node name="BackToMainMenu" type="Button" parent="Panel"]
margin_left = 90.0
margin_top = 120.0
margin_right = 316.0
margin_bottom = 170.0
text = "Back to Main Menu"

[node name="ResumeGame" type="Button" parent="Panel"]
margin_left = 90.0
margin_top = 50.0
margin_right = 316.0
margin_bottom = 100.0
text = "Resume"

[node name="Playername" type="Label" parent="Panel"]
margin_left = 160.0
margin_top = 14.0
margin_right = 241.0
margin_bottom = 28.0
text = "Pause"
align = 1
valign = 3

[connection signal="pressed" from="Panel/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Panel/BackToMainMenu" to="." method="_on_BackToMainMenu_pressed"]
[connection signal="pressed" from="Panel/ResumeGame" to="." method="_on_ResumeGame_pressed"]
